--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -41,7 +41,9 @@ Diseases affecting the heart and blood vessels are the major cause of mortality 
 ## Mendelian randomisation can be used to explore causality
 Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised control trial (RCT) [@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants [@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-statins), using low density lipoproteins-cholesterol (LDL-C) and cardiovsacular events as an example [@Bennett2017]. Here, single nucleotide polymorphisms (SNPs) that are associated with levels of LDL-C can be used. These SNPs should also not be associated with other confounding factors such as smoking. If people with SNPs which lower LDL-C also have lower rates of cardiovascular events, it is likely that the relationship between LDL-C and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and therefore other lines of evidence and study designs such as RCTs are required.
 
-```{r MR-statins, echo = FALSE, fig.cap="An example of how Mendelian randomisation and a randomised control trial can be used to determine whether lowering levels of low density lipoproteins can decrease risk of cardiovascular events. Figure from Bennett et al., 2017.", fig.scap="Mendelian randomisation example using LDL levels and cardiovascular events"}
+(ref:scaption-MR-statins) Mendelian randomisation example using LDL levels and cardiovascular events
+(ref:caption-MR-statins) **Example of how Mendelian randomisation and a randomised control trial can be used to determine whether lowering levels of low density lipoproteins can decrease risk of cardiovascular events**. Figure from Bennett et al. [@Bennett2017].
+```{r MR-statins, echo = FALSE, fig.cap="(ref:caption-MR-statins)", fig.scap="(ref:scaption-MR-statins)"}
 include_graphics(path = "figure/Intro_background/MR_statin_example.jpg", dpi = NA)
 ```
 
@@ -60,16 +62,13 @@ There is extensive evidence that higher BMI causes hypertension and T2D, which c
 ## Platelets are key cells in thrombosis
 Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis [@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation [@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change [@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines [@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y1 and P2Y12 platelet receptors. Integrins are heterodimeric transmembrane glycoprotein complexes, which are important in platelet activation [@Durrant2017a]. Binding of agonists such as thrombin (or the synthetic peptide agonist PAR1-AP/TRAP-6) to the protease-activated receptor 1 (PAR-1AP) (\@ref(fig:platelet-activation)) results in activation of the integrin α~IIb~β~3~. This is known as inside-out signalling. Here, inositol trisphosphate (IP3) and diacylglycerol are generated, which leads to an increase in cytosolic calcium (Ca^2+^). This in turn activates CALDAG-GEF1 as well as protein kinase C (PKC) [@Mehrbod2013]. The small GTPase, Rap1 is then activated which recruits proteins such as talin and kindlin [@Durrant2017]. Subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding [@Rivera2009]. These key platelet receptors are shown in figure \@ref(fig:platelet-activation). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis. This can cause a myocardial infarction and stroke.
 
-```{r platelet-activation, echo = FALSE, fig.cap="Key platelet receptors for platelet activation"}
+(ref:caption-platelet-activation) **Key platelet receptors for platelet activation**
+```{r platelet-activation, echo = FALSE, fig.cap="(ref:caption-platelet-activation)"}
 include_graphics(path = "figure/Intro_background/Platelet_activation.png", dpi = NA)
 ```
 
 ## Platelets are therapeutic targets for thrombosis
-When a patient has a clot in one of the coronary arteries, they often undergo percutaneous coronary intervention (PCI), which consists of inserting a catheter in order to place a stent to open up the occluded space. Following this, patients are commonly prescribed dual antiplatelet therapy (DAPT) [@Freynhofer2017a; @Nardin2015], which has shown to reduce occurrence of future myocardial infarction [@Khan2020]. Figure \@ref(fig:antiplatelet-drugs) shows the range of antiplatelet agents and their sites of action, however DAPT generally consists of aspirin and a P2Y~12~ antagonist such as clopidogrel or ticagrelor. 
-
-```{r antiplatelet-drugs, echo = FALSE, fig.cap="Cartoon of the antiplatelet therapies and their sites of action", fig.scap="Antiplatelet drugs", out.width="85%"}
-include_graphics(path = "figure/Intro_background/Antiplatelet_drugs.png", dpi = NA)
-```
+When a patient has a clot in one of the coronary arteries, they often undergo percutaneous coronary intervention (PCI), which consists of inserting a catheter in order to place a stent to open up the occluded space. Following this, patients are commonly prescribed dual antiplatelet therapy (DAPT) [@Freynhofer2017a; @Nardin2015], which has shown to reduce occurrence of future myocardial infarction [@Khan2020]. DAPT generally consists of aspirin and a P2Y~12~ antagonist such as clopidogrel or ticagrelor. 
 
 As BMI is associated with increased rates of thrombotic events and platelets are one of the key cells involved in thrombosis, it is likely that platelets are hyperactive compared to people who have a BMI in the healthy range. Various studies have attempted to address this question. There is mixed evidence for an effect of BMI on platelet hyperactivity. For example, in patients who were treated with clopidogrel there was a positive association between BMI and platelet activation in response to the agonist ADP [@Nardin2015]. Studies looking at BMI and platelet function are often limited by small sample sizes and are often restricted to patients being on antiplatelet therapy [@Deharo2014; @Sibbing2007; @Pankert2014]. Less is known about the association between BMI and platelet function in the absence of antiplatelet therapies. 
 
@@ -82,7 +81,10 @@ Platelet function can be measured by various laboratory techniques. Light transm
 Although there are not many large studies directly exploring platelet function, other measures of platelet characteristics are widely used in the clinic and among cohort studies. These charactertics are often reported as part of a routine full blood count. These include platelet count (PLT, absolute number of platelets), plateletcrit (PCT, the volume occupied by platelets), mean platelet volume (MPV) and platelet distribution width (PDW). These are often used as diagnostic tools, for example a low platelet count is demonstrative of thrombocytopenia and a high platelet count is known as thrombocytosis/thrombocythaemia. Platelet traits have also been implicated in cardiovascular disease: there is MR evidence that higher PLT contributes to the risk of ischaemic stroke [@Gill2018], thereby suggesting that these platelet parameters have functional and clinical relevance. There is also evidence that alterations in these parameters associate with platelet function. For example, higher platelet count has been shown to associate with increased platelet aggregation [@Wurtz2012]. Previous studies have explored the association between BMI and platelet paramteres. Some studies have foudn evidence for an association between BMI and both platelet count and mean platelet volume, however other studies have lacked evidence for an effect [@Furuncuoglu2016; @Han2018a; @Coban2005; @Heffron2018], suggesting that these effects are null. These observational studies may be subject to confounding, bias and reverse causation, therefore it is unclear whether there is a causal effect of BMI on these platelet traits, or whether effects are due to other factors. 
 
 More recent haematology analysers such as the Sysmex XN series analysers can provide additional information about platelet structure. They use a combination of fluorescence and impedence flow cyotemtry. Additional readouts provided by these analyzers include immature platelet count (IPC, the number of immature platelets) as well as immature platelet fraction (IPF, the fraction of platelets which are immature), based on a gating of their forward scatter (FSC, size) and side fluorescence (SFL, an indicator of mRNA content). Detection of PLT and IPF by flow cytometry is shown in Figure \@ref(fig:sysmex-ipf) [@Corpataux2020]. Immature platelets, or reticulated platelets, are the youngest platelets in circulation. They persist for between 24 and 36 hours [@Corpataux2020]. Immature platelets are larger in size and have more mRNA than older circulating platelets. Over time the mRNA degrades and they gradually decrease in size. There are various studies which have suggested that a larger number of immature platelets may increase the risk of suffering from major adverse cardiovascular events (MACE) [@Ibrahim2014]. This suggests that immature platelets may be more reactive.
-```{r sysmex-ipf, echo = FALSE, fig.cap="Scatter plot indicating how platelets and immature platelets are detected using a Sysmex haematology analyser. The forward scatter (FSC, a measure of cell size) and side fluorescence (SFL, a measure of cell mRNA content) are used to detect cell types. Immature platelets have a larger FSC and SFL. PLT-F = fluorescent platelet count, IPF = immature platelet fraction, RBC = red blood cells, WBC = white blood cells. Figure from Corpataux et al.", fig.scap="Scatter plot indicating how platelets are immature platelets are detected using a Sysmex haematology analyser"}
+
+(ref:caption-sysmex-ipf) **Scatter plot indicating how platelets and immature platelets are detected using a Sysmex haematology analyser**. The forward scatter (FSC, a measure of cell size) and side fluorescence (SFL, a measure of cell mRNA content) are used to detect cell types. Immature platelets have a larger FSC and SFL. PLT-F = fluorescent platelet count, IPF = immature platelet fraction, RBC = red blood cells, WBC = white blood cells. Figure from Corpataux et al. [@Corpataux2020]
+(ref:scaption-sysmex-ipf) Scatter plot indicating how platelets are immature platelets are detected using a Sysmex haematology analyser
+```{r sysmex-ipf, echo = FALSE, fig.cap="(ref:caption-sysmex-ipf)", fig.scap="(ref:scaption-sysmex-ipf)"}
 include_graphics(path = "figure/Intro_background/Sysmex_IPF.png", dpi = NA)
 ```
 ## Platelet primers
@@ -113,8 +115,9 @@ The aims of the thesis are indicated below, with a schematic of the multi-step p
 2) Characterise the effects of the chemokines macrophage-derived chemokine (MDC) and thymus and activation regulated chemokine (TARC) on platelet function.
 3) Determine the effects of adiposity on the plasma proteome.
 
-
-```{r Thesis-schematic, echo = FALSE, fig.cap="Schematic of the multi-step pathway addressed in the thesis", fig.scap="Schematic of the multi-step pathway addressed in the thesis"}
+(ref:caption-Thesis-schematic) **Schematic of the multi-step pathway addressed in the thesis**
+(ref:scaption-Thesis-schematic) Schematic of the multi-step pathway addressed in the thesis
+```{r Thesis-schematic, echo = FALSE, fig.cap="(ref:caption-Thesis-schematic)", fig.scap="(ref:scaption-Thesis-schematic)"}
 include_graphics(path = "figure/Intro_background/Thesis_graphic_overview_without_chapters.png", dpi = NA)
 ```
 
