--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -46,7 +46,9 @@ The aims of this chapter are:
 
 Figure \@ref(fig:chemokine-platelet-graphic) indicates the parts of the overal thesis hypthoses which are addressed in the current chapter.
 
-```{r chemokine-platelet-graphic, echo = FALSE , fig.scap="Schematic of the associations explored", fig.cap="Schematic of the associations explored: this chapter explores the effect of the chemokines MDC and TARC on platelet function and aims to explore their involvement in disease. Figure made using BioRender.com.", out.width="90%"}
+(ref:caption-chemokine-platelet-graphic) **Schematic of the associations explored in Chapter \@ref(chemokine-platelets)**. This chapter explores the effect of the chemokines MDC and TARC on platelet function and aims to explore their involvement in disease. Figure made using BioRender.com.
+(ref:scaption-chemokine-platelet-graphic) Schematic of the associations explored in Chapter \@ref(chemokine-platelets)
+```{r chemokine-platelet-graphic, echo = FALSE , fig.scap="(ref:scaption-chemokine-platelet-graphic)", fig.cap="(ref:caption-chemokine-platelet-graphic)", out.width="90%"}
 include_graphics(path = "figure/Chemokines/Thesis_graphic_overview_chemokines.png", dpi = NA)
 ```
 
@@ -64,7 +66,7 @@ To investigate the effect of MDC and TARC on agonist-induced platelet aggregatio
 
 
 (ref:scaption3a) The priming effect of the chemokines MDC and TARC on PAR1-AP induced platelet aggregation in washed platelets
-(ref:caption3a) Washed platelets at 2x10^8^/mL supplemented with PGE1 and apyrase were preincubated with MDC or TARC (5 mins) before application of PAR1-AP-induced aggregation (5 mins). A) Raw aggregation trace comparing the effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced aggregation. B) Bar chart comparing the maximum aggregation reached when adding vehicle, MDC or TARC. C) Bar chart comparing the area under the curve of the aggregation trace in response to vehicle, MDC or TARC. Results analysed with a repeated measures one-way ANOVA with Dunnett’s multiple comparisons. N=7. Mean+SEM displayed.
+(ref:caption3a) **The priming effect of the chemokines MDC and TARC on PAR1-AP induced platelet aggregation in washed platelets**. Washed platelets at 2x10^8^/mL supplemented with PGE1 and apyrase were preincubated with MDC or TARC (5 mins) before application of PAR1-AP-induced aggregation (5 mins). A) Raw aggregation trace comparing the effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced aggregation. B) Bar chart comparing the maximum aggregation reached when adding vehicle, MDC or TARC. C) Bar chart comparing the area under the curve of the aggregation trace in response to vehicle, MDC or TARC. Results analysed with a repeated measures one-way ANOVA with Dunnett’s multiple comparisons. N=7. Mean+SEM displayed.
 ```{r MDC-TARC-agg, echo = FALSE, out.width="85%", fig.cap="(ref:caption3a)", fig.scap= "(ref:scaption3a)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_aggregation_PAR1.pdf", dpi = NA)
 
@@ -75,7 +77,7 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_aggregation_PAR1.pdf
 Next, the priming effect of MDC and TARC was explored on platelet aggregation in PRP using plate aggregation. Plate aggregation allows exploration of more conditions than LTA, therefore full concentration-response curves can be constructed. MDC and TARC were not able to potentiate the aggregation induced by increasing concentrations of PAR1-AP (Figure \@ref(fig:MDC-TARC-agg-PRP)A). There was no difference in the pEC50 for comparing vehicle with MDC and TARC (Figure \@ref(fig:MDC-TARC-agg-PRP)B).   
 
 (ref:scaption10) The priming effect of the chemokines MDC and TARC on PAR1-AP induced platelet aggregation in PRP using plate aggregation
-(ref:caption10) PRP supplemented with apyrase was preincubated with MDC or TARC (5 mins) before application of PAR1-AP and aggregation induced by a plate shaker (5 mins). A) Concentration-response curves of the effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced aggregation. N=7. B) Bar chart of the pEC50s of the PAR1-AP concentration response curve in the presence of vehicle, MDC or TARC. Results analysed using a repeated measures one-way ANOVA with Dunnett's multiple comparisons. N=7.
+(ref:caption10) **The priming effect of the chemokines MDC and TARC on PAR1-AP induced platelet aggregation in PRP using plate aggregation.** PRP supplemented with apyrase was preincubated with MDC or TARC (5 mins) before application of PAR1-AP and aggregation induced by a plate shaker (5 mins). A) Concentration-response curves of the effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced aggregation. N=7. B) Bar chart of the pEC50s of the PAR1-AP concentration response curve in the presence of vehicle, MDC or TARC. Results analysed using a repeated measures one-way ANOVA with Dunnett's multiple comparisons. N=7.
 ```{r MDC-TARC-agg-PRP, echo = FALSE, fig.cap="(ref:caption10)", fig.scap= "(ref:scaption10)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_PRP_plate_agg.pdf", dpi = NA)
 
@@ -86,12 +88,14 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_PRP_plate_agg.pdf", 
 When a platelet becomes activated by an agonist, the integrin α~IIb~β~3~ changes confirmation and is exposed on the membrane of the platelet. This allows fibrinogen to bind and aggregation to occur. P-selectin is also expressed on the membrane as a result of stimulation and is a marker of alpha granule secretion. To assess whether MDC and TARC affect integrin α~IIb~β~3~ activation and P-selectin expression, washed platelets were incubated with vehicle, 200 ng/ml MDC or TARC prior to PAR-AP stimulation. MDC enhanced integrin α~IIb~β~3~ activation, with a leftward shift in the PAR1-AP concentration response curve (pEC50= -5.54 M (SEM 0.10 M) to -5.66 M (SEM 0.08 M), p=0.02). Preincubation with TARC had the same effect as MDC, left shifting the concentration-response curve (pEC50 = -5.54 M (SEM 0.11 M) to -5.64 M (SEM 0.11 M), p=0.01, Figure \@ref(fig:MDC-TARC-integrin-pselectin)A). MDC and TARC did not cause a significant increase in the maximal integrin activation. As the concentration of PAR1-AP applied to the platelets increased, the amount of P-selectin exposed increased and therefore there was an increase in the MFI. The pEC50 for the PAR1-AP effect on P-selectin expression was -5.36 (SEM 0.07) (Figure \@ref(fig:MDC-TARC-integrin-pselectin)B). Preincubation with 200 ng/ml MDC caused a small leftward shift in pEC50 to -5.44 (SEM 0.07) (MDC v vehicle, p=0.006), but preincubation with 200 ng/ml TARC did not alter the sensitivity to PAR1-AP. Together these results show that MDC and TARC are able to potentiate platelet activation mainly through integrin α~IIb~β~3~. In the absence of PAR1-AP, both MDC and TARC had a weak effect on integrin α~IIb~β~3~ activation: increasing basal levels from a median fluorescence intensity (MFI) of 161 (SEM 20) to 222 (SEM 27) (vehicle v MDC, p=0.006) and to 285 ± 36 (vehicle v TARC, p=0.007) respectively (Figure \@ref(fig:MDC-TARC-integrin-pselectin)C). This effect was specific to integrin α~IIbβ~3~ as it was not seen with P-selectin.
 
 (ref:scaption3) The priming effect of the chemokines MDC and TARC on PAR1-AP induced α~IIb~β~3~ activation and P-selectin expression
-(ref:caption3) Washed platelets at 2x10^7^/mL supplemented with PGE1 and apyrase were preincubated with MDC or TARC (5 mins) before application of PAR1-AP (5 mins). Integrin α~IIb~β~3~ activation and P-selectin expression were measured using flow cytometry. A) The effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced α~IIb~β~3~ activation measured as the median fluorescence intensity (AU). B) The effect of vehicle, MDC or TARC on PAR1-AP induced P-selectin expression measured using median fluorescence intensity (AU). pEC50s compared using a one-way ANOVA with Dunnett's multiple comparisons in Table \@ref(tab:chemokines-integrin-pselectin) C) MDC and TARC alone increase integrin α~IIb~β~3~ activation. Mean + SEM displayed. N=4.
+(ref:caption3) **The priming effect of the chemokines MDC and TARC on PAR1-AP induced α~IIb~β~3~ activation and P-selectin expression.** Washed platelets at 2x10^7^/mL supplemented with PGE1 and apyrase were preincubated with MDC or TARC (5 mins) before application of PAR1-AP (5 mins). Integrin α~IIb~β~3~ activation and P-selectin expression were measured using flow cytometry. A) The effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced α~IIb~β~3~ activation measured as the median fluorescence intensity (AU). B) The effect of vehicle, MDC or TARC on PAR1-AP induced P-selectin expression measured using median fluorescence intensity (AU). pEC50s compared using a one-way ANOVA with Dunnett's multiple comparisons in Table \@ref(tab:chemokines-integrin-pselectin) C) MDC and TARC alone increase integrin α~IIb~β~3~ activation. Mean + SEM displayed. N=4.
 ```{r MDC-TARC-integrin-pselectin, echo = FALSE, out.width="85%", fig.cap="(ref:caption3)", fig.scap= "(ref:scaption3)"}
 include_graphics(path = "figure/Chemokines/Layouts/P-selectin_integrin_MDC_TARC.pdf", dpi = NA)
 
 ```
 
+(ref:caption-chemokines-integrin-pselectin) **Comparison of the effect of MDC and TARC on the pEC50 for PAR1-AP induced integrin activation and P-selectin expression**. Estimate compared with a one-way ANOVA (N=4).
+(ref:scaption-chemokines-integrin-pselectin) Comparison of the effect of MDC and TARC on the pEC50 for PAR1-AP induced integrin activation and P-selectin expression
 ```{r chemokines-integrin-pselectin,  echo=FALSE}
 options(knitr.kable.NA = "")
 V = c("Vehicle", "MDC", "TARC")
@@ -103,7 +107,7 @@ SE2 <- c(0.07, 0.07, 0.11)
 P2 <- c(NA, 0.006, 0.21)
 mytable = data.frame(cbind(V, pEC50, SE, P, pEC502, SE2, P2))
 names(mytable) <- c("Condition", "Integrin activation pEC50 (M)", "Integrin pEC50 SEM", "Integrin P value", "P-selectin pEC50 (M)", "P-selectin pEC50 SEM", "P-selectin p value")
-mytable %>% kable(caption = "Comparison of the effect of MDC and TARC on the pEC50 for PAR1-AP induced integrin activation and P-selectin expression compared with a one-way ANOVA (N=4)", booktabs = TRUE) %>% 
+mytable %>% kable(caption = "(ref:caption-chemokines-integrin-pselectin)", caption.short ="(ref:scaption-chemokines-integrin-pselectin)", booktabs = TRUE) %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   landscape()
@@ -114,7 +118,7 @@ mytable %>% kable(caption = "Comparison of the effect of MDC and TARC on the pEC
 When a platelet is activated by strong agonists, such as dual stimulation by collagen-related peptide (CRP) and thrombin, PS is translocated from the inner platelet membrane to the outer, thereby facilitating coagulation by providing binding sites for prothrombinase complex and supporting thrombin generation [@Reddy2020]. MDC and TARC did not affect the overall percentage of annexin V positive platelets induced by CRP and thrombin (Figure \@ref(fig:MDC-TARC-PS-exposure)).
 
 (ref:scaption4) The effect of the chemokines MDC and TARC on PAR1-AP induced PS exposure
-(ref:caption4) A) Washed platelets at 2x10^7^/mL supplemented with indomethacin and apyrase were preincubated with vehicle, 200ng/mL MDC or 200 ng/mL TARC (5 mins) before application of CRP and increasing concentrations of thrombin (10 mins). PS exposure was measured using flow cytometry (N=4). B) Bar chart comparing the effect of vehicle, MDC or TARC on the pEC50s (M) of thrombin induced PS exposure. pEC50s were compared by a Friedman's test.
+(ref:caption4) **The effect of the chemokines MDC and TARC on PAR1-AP induced PS exposure**. A) Washed platelets at 2x10^7^/mL supplemented with indomethacin and apyrase were preincubated with vehicle, 200ng/mL MDC or 200 ng/mL TARC (5 mins) before application of CRP and increasing concentrations of thrombin (10 mins). PS exposure was measured using flow cytometry (N=4). B) Bar chart comparing the effect of vehicle, MDC or TARC on the pEC50s (M) of thrombin induced PS exposure. pEC50s were compared by a Friedman's test.
 ```{r MDC-TARC-PS-exposure, echo = FALSE, fig.cap="(ref:caption4)", fig.scap= "(ref:scaption4)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_PS_exposure_layout.pdf", dpi = NA)
 
@@ -125,7 +129,7 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_PS_exposure_layout.p
 MDC and TARC were applied to washed platelets to determine whether they exert effects on platelet aggregation in the absence of an agonist. MDC and TARC did not cause platelet aggregation, however they did cause an upward deflection on the aggregation trace (Figure \@ref(fig:MDC-TARC-wp-alone-aggregation)). This upward deflection is a reduction in light passing through the sample, indicating that the platelets may be undergoing shape change.
 
 (ref:scaption8) The effect of the chemokines MDC and TARC alone on aggregation in washed platelets
-(ref:caption8) A-C) Washed platelets at 2x10^8^/mL supplemented with PGE1 and apyrase were stimulated with vehicle, 200ng/mL MDC, 200 ng/mL TARC or 1 uM PAR1-AP (5 mins). Aggregation was measured using light transmission aggregometry. Each graph is a representative trace from a separate donor
+(ref:caption8) **The effect of the chemokines MDC and TARC alone on aggregation in washed platelets**. A-C) Washed platelets at 2x10^8^/mL supplemented with PGE1 and apyrase were stimulated with vehicle, 200ng/mL MDC, 200 ng/mL TARC or 1 uM PAR1-AP (5 mins). Aggregation was measured using light transmission aggregometry. Each graph is a representative trace from a separate donor
 ```{r MDC-TARC-wp-alone-aggregation, out.width="90%", echo = FALSE, fig.cap="(ref:caption8)", fig.scap= "(ref:scaption8)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_alone_wp_aggregation.pdf", dpi = NA)
 
@@ -136,7 +140,7 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_alone_wp_aggregation
 Calcium mobilisation was measured by using a fluorescent dye, Fura-2, which binds to intracellular calcium. Increasing concentrations of ADP were added to washed platelets as a positive control, where increasing calcium mobilisation was observed (\@ref(fig:MDC-TARC-wp-calcium)A). MDC and TARC alone were also able to increase calcium mobilisation in a concentration-dependent manner (\@ref(fig:MDC-TARC-wp-calcium)B), however caused a much smaller calcium response than ADP. 
 
 (ref:scaption9) The effect of ADP and the chemokines MDC and TARC alone on calcium mobilisation in washed platelets.
-(ref:caption9) Washed platelets at 2x10^8^/mL supplemented with indomethacin and apyrase were loaded with Fura-2. Platelets were stimulated with increasing concentrations of A) ADP or B) 200ng/mL MDC or 200 ng/mL TARC. Area under curve represents the free calcium and is ratio of fluorescence at wavelengths 340:380 nm.
+(ref:caption9) **The effect of ADP and the chemokines MDC and TARC alone on calcium mobilisation in washed platelets.** Washed platelets at 2x10^8^/mL supplemented with indomethacin and apyrase were loaded with Fura-2. Platelets were stimulated with increasing concentrations of A) ADP or B) 200ng/mL MDC or 200 ng/mL TARC. Area under curve represents the free calcium and is ratio of fluorescence at wavelengths 340:380 nm.
 ```{r MDC-TARC-wp-calcium, echo = FALSE, out.width="90%", fig.cap="(ref:caption9)", fig.scap= "(ref:scaption9)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_calcium_wp.pdf", dpi = NA)
 
@@ -147,7 +151,7 @@ MDC and TARC activate the platelet receptor CCR4, which can reportedly couple to
 
 
 (ref:scaption6) A representative blot of the effect of MDC, TARC and ADP on PGE~1~ stimulated phospho-VASP.
-(ref:caption6) A representative blot of the effect of 200 ng/mL MDC, 200 ng/mL TARC and 10 uM ADP on phospho-VASP at Serine^157^ and Serine^239^ in the presence of increasing concentrations of PGE~1~ which is quantified in \@ref(fig:MDC-TARC-wp-VASP-bar).
+(ref:caption6) **A representative blot of the effect of 200 ng/mL MDC, 200 ng/mL TARC and 10 uM ADP on phospho-VASP at Serine^157^ and Serine^239^ in the presence of increasing concentrations of PGE~1~**. Quantification is shown in Figure \@ref(fig:MDC-TARC-wp-VASP-bar).
 
 ```{r MDC-TARC-wp-WB-VASP, echo = FALSE, out.width="60%", fig.cap="(ref:caption6)", fig.scap= "(ref:scaption6)"}
 include_graphics(path = "figure/Chemokines/MDC_TARC_VASP_blot.pdf", dpi = NA)
@@ -155,7 +159,7 @@ include_graphics(path = "figure/Chemokines/MDC_TARC_VASP_blot.pdf", dpi = NA)
 ```
 
 (ref:scaption7) Quantification of the effect of MDC, TARC and ADP on PGE~1~ stimulated phospho-VASP.
-(ref:caption7) Bar charts of the effect of 200 ng/mL MDC, 200 ng/mL TARC and 10 uM ADP on phospho-VASP at A) Serine 239 in the absence of PGE~1~, B) Serine 239 in the presence of 100 nM PGE~1~, C) Serine 157 in the absence of PGE~1~, D) Serine 157 in the presence of 100 nM PGE~1~. N=4. Results analysed with a repeated measures one-way ANOVA with Dunnett's Multiple comparisons. 
+(ref:caption7) **Quantification of the effect of MDC, TARC and ADP on PGE~1~ stimulated phospho-VASP.** Bar charts of the effect of 200 ng/mL MDC, 200 ng/mL TARC and 10 uM ADP on phospho-VASP at A) Serine 239 in the absence of PGE~1~, B) Serine 239 in the presence of 100 nM PGE~1~, C) Serine 157 in the absence of PGE~1~, D) Serine 157 in the presence of 100 nM PGE~1~. N=4. Results analysed with a repeated measures one-way ANOVA with Dunnett's Multiple comparisons. 
 
 ```{r MDC-TARC-wp-VASP-bar, echo = FALSE, out.wdith = "50%", fig.cap="(ref:caption7)", fig.scap= "(ref:scaption7)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_WB_VASP.pdf", dpi = NA)
@@ -163,7 +167,7 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_WB_VASP.pdf", dpi = 
 ```
 
 (ref:scaption5) The effect of the chemokines MDC and TARC on phospho-VASP levels using flow cytometry
-(ref:caption5) A) Washed platelets at 1x10^8^/mL were supplemented with indomethacin and apyrase. Platelets were preincubated with vehicle, 200ng/mL MDC, 200 ng/mL TARC or 10 uM ADP (5 mins) before application of increasing concentrations of PGE~1~ (5 mins). Phospho-VASP at Ser^157^ was measured using flow cytometry (N=3). B) Bar chart of the pEC50s of each concentration response curve from A. pEC50s were compared using a one-way ANOVA with Dunnett's multiple comparisons.
+(ref:caption5) **The effect of the chemokines MDC and TARC on phospho-VASP levels using flow cytometry.** A) Washed platelets at 1x10^8^/mL were supplemented with indomethacin and apyrase. Platelets were preincubated with vehicle, 200ng/mL MDC, 200 ng/mL TARC or 10 uM ADP (5 mins) before application of increasing concentrations of PGE~1~ (5 mins). Phospho-VASP at Ser^157^ was measured using flow cytometry (N=3). B) Bar chart of the pEC50s of each concentration response curve from A. pEC50s were compared using a one-way ANOVA with Dunnett's multiple comparisons.
 ```{r MDC-TARC-VASP-FACS, echo = FALSE, out.width="90%", fig.cap="(ref:caption5)", fig.scap= "(ref:scaption5)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_VASP_FACS_logec50.pdf", dpi = NA)
 
@@ -177,7 +181,7 @@ The mechanism by which these chemokines cause platelet aggregation in PRP was fu
 The effects of these inhibitors on MDC-induced aggregation were then explored. MDC by itself was able to consistently cause over 60% aggregation in PRP. The CCR4 inhibitor AZD-2098 was able to reduce this aggregation, but only at 50 uM (Figures \@ref(fig:MDC-PRP-agg-bar)C, \@ref(fig:MDC-PRP-agg-trace)A, B). The G~q~ inhibitor YM-254890 was able to reduce the maximum aggregation induced by MDC (Figure \@ref(fig:MDC-PRP-agg-bar)C, Figure \@ref(fig:MDC-PRP-agg-trace)C), suggesting CCR4 couples to G~q~. Y27632 did not affect aggregation induced by MDC, suggesting that this aggregation is not dependent on G~12/13~ and ROCK (Figure \@ref(fig:MDC-PRP-agg-bar)D, \@ref(fig:MDC-PRP-agg-trace)D). Application of MDC to PRP did not cause shape change.
 
 (ref:scaption12) The effect of inhibitors on PAR1-AP and MDC induced aggregation in PRP.
-(ref:caption12) Platelet rich plasma (PRP) supplemented with apyrase was incubated for 5 minutes with the antagonist indicated, followed by stimulation by PAR1-AP or MDC. A) Effect of 10 uM AZD-2098 (CCR4 antagonist) on maximal aggregation induced by PAR1-AP B) Effect of 10 uM YM-254890 (G~q~ inhibitor) on maximal aggregation induced by PAR1-AP C) Effect of AZD-2098 and YM-254890 on aggregation induced by 200 ng/mL MDC D) Effect of the ROCK inhibitor Y27632 on aggregation induced by 200 ng/mL MDC Results are analysed with a paired two-tailed t-test or repeated measures one-way ANOVA with Dunnett's Multiple comparisons. N=3-5.
+(ref:caption12) **The effect of inhibitors on PAR1-AP and MDC induced aggregation in PRP.** Platelet rich plasma (PRP) supplemented with apyrase was incubated for 5 minutes with the antagonist indicated, followed by stimulation by PAR1-AP or MDC. A) Effect of 10 uM AZD-2098 (CCR4 antagonist) on maximal aggregation induced by PAR1-AP B) Effect of 10 uM YM-254890 (G~q~ inhibitor) on maximal aggregation induced by PAR1-AP C) Effect of AZD-2098 and YM-254890 on aggregation induced by 200 ng/mL MDC D) Effect of the ROCK inhibitor Y27632 on aggregation induced by 200 ng/mL MDC Results are analysed with a paired two-tailed t-test or repeated measures one-way ANOVA with Dunnett's Multiple comparisons. N=3-5.
 
 ```{r MDC-PRP-agg-bar, echo = FALSE, out.width="95%", fig.cap="(ref:caption12)", fig.scap= "(ref:scaption12)"}
 include_graphics(path = "figure/Chemokines/Layouts/PAR1_MDC_inhibitors_aggregation.pdf", dpi = NA)
@@ -186,7 +190,7 @@ include_graphics(path = "figure/Chemokines/Layouts/PAR1_MDC_inhibitors_aggregati
 
 
 (ref:scaption11) Aggregation traces of the effect of inhibitors on MDC induced platelet aggregation in PRP.
-(ref:caption11) Representative aggregation traces of platelet rich plasma (PRP) supplemented with apyrase, incubated with A) 10 uM CCR4 antagonist AZD-2098 B) 50 uM AZD-2098 C) 10 uM G~q~ inhibitor YM-254890 D) 10 uM ROCK inhibitor Y27632, followed by addition of 200 ng/mL MDC.
+(ref:caption11) **Aggregation traces of the effect of inhibitors on MDC induced platelet aggregation in PRP.** Representative aggregation traces of platelet rich plasma (PRP) supplemented with apyrase, incubated with A) 10 uM CCR4 antagonist AZD-2098 B) 50 uM AZD-2098 C) 10 uM G~q~ inhibitor YM-254890 D) 10 uM ROCK inhibitor Y27632, followed by addition of 200 ng/mL MDC.
 
 ```{r MDC-PRP-agg-trace, echo = FALSE, out.width="95%", fig.cap="(ref:caption11)", fig.scap= "(ref:scaption11)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_inhibitors_aggregation_traces.pdf", dpi = NA)
@@ -200,6 +204,7 @@ To determine whether levels of MDC or TARC contribute to disease, a two sample M
 
 There was weaker evidence for causal effects of TARC on disease, with evidence that higher levels of TARC have an effect on rheumatoid arthritis (Effect size 0.10, SE 0.04, p=8.51x10^-3^). There was weak evidence for higher TARC decreasing the risk of ischaemic stroke (Effect size -0.08, SE 0.04, p=0.03).
 
+(ref:caption-MDC-disease-MR) Estimates for the effect of MDC on disease outcomes using two sample Mendelian randomization
 ```{r MDC-disease-MR,  echo=FALSE}
 options(knitr.kable.NA = "")
 V = c("MDC/CCL22", "MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22" )
@@ -212,7 +217,7 @@ SE <- c(0.0209,0.0512,0.0775,0.0084,0.0079,0.0654,0.0648,0.1237,0.0381,0.048,0.0
 P2 <- c(2.200e-26,9.810e-09,1.969e-05,1.961e-04,3.201e-04,4.570e-04,6.186e-04,1.075e-03,1.607e-03,2.086e-03,4.246e-03,5.124e-03,1.655e-02,1.731e-02,2.527e-02,2.976e-02,4.163e-02,4.552e-02,4.755e-02)
 mytable = data.frame(cbind(V, Trait, SNP, Method, Effect, SE, P2))
 names(mytable) <- c("Protein", "Outcome trait", "N SNP (rsID)", "Method", "Effect sie", "Standard error", "P value")
-mytable %>% kable(caption = "Estimates for the effect of MDC on disease outcomes using two sample Mendelian randomization", booktabs = TRUE) %>% 
+mytable %>% kable(caption = "(ref:caption-MDC-disease-MR)", booktabs = TRUE) %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE, font_size=9) %>%
   column_spec(2, width = "5cm") %>%
@@ -222,6 +227,7 @@ mytable %>% kable(caption = "Estimates for the effect of MDC on disease outcomes
 \newpage
 \thispagestyle{empty}
 \vspace*{-3cm}
+ref(caption-TARC-disease-MR) Estimates for the effect of TARC on disease outcomes using two sample Mendelian randomization
 ```{r TARC-disease-MR,  echo=FALSE}
 options(knitr.kable.NA = "")
 V = c("TARC/CCL17", "TARC/CCL17", "TARC/CCL17", "TARC/CCL17", "TARC/CCL17", "TARC/CCL17")
@@ -233,7 +239,7 @@ SE <- c(0.0386,0.0845,0.0012,0.114,0.0373,0.0058)
 P2 <- c(8.510e-03,9.826e-03,1.172e-02,1.717e-02,2.999e-02,4.445e-02)
 mytable = data.frame(cbind(V, Trait, SNP, Method, Effect, SE, P2))
 names(mytable) <- c("Protein", "Outcome trait", "N SNP (rsID)", "Method", "Effect sie", "Standard error", "P value")
-mytable %>% kable(caption = "Estimates for the effect of TARC on disease outcomes using two sample Mendelian randomization", booktabs = TRUE) %>% 
+mytable %>% kable(caption = "ref(caption-TARC-disease-MR)", booktabs = TRUE) %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE, font_size=10) %>%
   column_spec(2, width = "4cm") %>%
@@ -259,11 +265,3 @@ In efforts to determine whether levels of MDC or TARC are affected by BMI, a one
 ### Conclusions
 
 Overall, this chapter provided evidence that the chemokines MDC and TARC potentiate platelet aggregation induced by PAR1-AP. On their own in washed platelets, a small calcium response can be observed as well as shape change, but PRP is required to observe full aggregation. Signalling experiments suggest MDC and TARC act at the CCR4 receptor on platelets, and that G~q~ coupling is responsible for the functional effects observed. There was evidence that higher MDC may have a causal effect on DVT and PE. MDC may therefore be a biomarker for venous thromboembolism. Further work is required to determine signalling, and further cohort studies would be useful to confirm effects of MDC on DVT and PE.
-
-
-
-
-
-
-
-
