--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -34,17 +34,20 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 ## Overall findings
 The work presented in this thesis brought together an interdisciplinary approach to expand on previous literature to further explore the contribution of platelet function and the plasma proteome to obesity-related thrombosis. A summary of pathways explored in each results chapters is displayed in Figure \@ref(fig:Thesis-schematic-chaps), with a more detailed summary of findings in Table \@ref(tab:main-thesis-findings). 
 
-```{r Thesis-schematic-chaps, echo = FALSE, out.width = "90%", fig.cap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored. Figure made using BioRender.com.", fig.scap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers"}
+(ref:caption-Thesis-schematic-chaps) **Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored.** Figure made using BioRender.com.
+(ref:scaption-Thesis-schematic-chaps) Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored
+```{r Thesis-schematic-chaps, echo = FALSE, out.width = "90%", fig.cap="(ref:caption-Thesis-schematic-chaps)", fig.scap="(ref:scaption-Thesis-schematic-chaps)"}
 include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters.png", dpi = NA)
 ```
 
+(ref:caption-main-thesis-findings) Summary of main findings from the thesis
 ```{r main-thesis-findings,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 Chapter = c('Chapter 4', 'Chapter 5', 'Chapter 6', 'Chapter 7', 'Chapter 8')
 findings = c("Higher body mass index (BMI) leads to higher immature platelet count (IPC) in a Mendelian randomization framework (INTERVAL). Within a cardiac surgery cohort (COPTIC), immature platelet count was positively associated with whole blood platelet aggregation.","Laboratory experiments were optimised to assess platelet function from patients. In the clinical pilot study, there was no evidence for an effect of high BMI on platelet function, but there was evidence for a difference in levels of platelet proteins across groups. This study needs to be replicated with a larger N, controlling for confounders.", "This study provided evidence that the chemokines MDC and TARC can potentiate PAR1-AP induced platelet function. The chemokines were also found to be able to activate platelets when applied alone. It is likely that these effects are through the CCR4 receptor which is likely to be G~q~ coupled. A two sample Mendelian randomization analysis implicated higher levels of MDC in deep vein thrombosis and pulmonary embolism.", "Higher BMI has a causal effect on levels of proteins which circulate in the plasma. Proteins most altered by BMI were enriched for cardiovascular disease, metabolic disease and renal disease.", "Weight loss as a result of caloric restriction has a substantial effect on the plasma proteome and protein levels altered as a result of higher BMI (Chapter 7) can be reversed with weight loss.")
 mytable = cbind(Chapter, findings)
 colnames(mytable) <- c("Chapter", "Main findings")
-mytable %>% kable(caption = "Summary of main findings from the thesis", booktabs = TRUE, format="markdown") %>% 
+mytable %>% kable(caption = "(ref:caption-main-thesis-findings)", booktabs = TRUE, format="markdown") %>% 
   kable_classic_2(full_width = F) %>%
   #kable_paper("hover", full_width = F)
  kable_styling(full_width = TRUE) %>%
